--- a/ubuntu-intellij/.circleci/config.yml
+++ b/ubuntu-intellij/.circleci/config.yml
@@ -4,8 +4,13 @@ jobs:
     machine:
       image: circleci/classic:latest
     steps:
+        - checkout
         - run:
             name:  Running tests 
             command: 
                     docker build -t oviney/ubuntu-intellij .
-
+workflows:
+  version: 2
+  workflow:
+    jobs:
+    - build
