-restructing project files.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,15 @@
 version: 2
 jobs:
   build:
+    # Setup the machine with the CircleCI image
     machine:
       image: circleci/classic:latest
+    steps:  # do stuff
+      - checkout
+      - run:
+              name:  Do something
+              command:  echo "Do something"
+      - run:
+              name:  Do something else
+              command:  echo "Do something else"
+
